--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ scipy==1.4.1
 
 
 ##### Machine Learning packages
-scikit-learn==0.22
+scikit-learn==0.22.2.post1
 
 # Optional: the XGBoost library is only used in chapter 7
 xgboost==1.0.2
